// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyValueRow Prebuilt Component KeyValueRow should render both primary and secondary text 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingVertical": 8,
    }
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Medium",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
        testID="label"
      >
        Primary Key Text
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#6a737d",
            "fontFamily": "EuclidCircularB-Medium",
            "fontSize": 12,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 20,
          }
        }
        testID="label"
      >
        Secondary Key Text
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Medium",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
        testID="label"
      >
        Primary Value Text
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#1c8234",
              "fontFamily": "EuclidCircularB-Medium",
              "fontSize": 10,
              "fontWeight": "500",
              "letterSpacing": 0.25,
              "lineHeight": 16,
            }
          }
          testID="label"
        >
          Secondary Value Text
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`KeyValueRow Prebuilt Component KeyValueRow should render both primary and secondary text with icons 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingVertical": 8,
    }
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 12,
          "height": 24,
          "overflow": "hidden",
          "width": 24,
        }
      }
    >
      <Image
        onError={[Function]}
        resizeMode="contain"
        source={
          {
            "uri": "MockImage",
          }
        }
        style={
          {
            "flex": 1,
            "height": undefined,
            "width": undefined,
          }
        }
        testID="token-avatar-image"
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Medium",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
        testID="label"
      >
        Primary Key Text
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 12,
          "height": 24,
          "overflow": "hidden",
          "width": 24,
        }
      }
    >
      <Image
        onError={[Function]}
        resizeMode="contain"
        source={
          {
            "uri": "MockImage",
          }
        }
        style={
          {
            "flex": 1,
            "height": undefined,
            "width": undefined,
          }
        }
        testID="token-avatar-image"
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#6a737d",
            "fontFamily": "EuclidCircularB-Medium",
            "fontSize": 12,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 20,
          }
        }
        testID="label"
      >
        Secondary Key Text
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 12,
          "height": 24,
          "overflow": "hidden",
          "width": 24,
        }
      }
    >
      <Image
        onError={[Function]}
        resizeMode="contain"
        source={
          {
            "uri": "MockImage",
          }
        }
        style={
          {
            "flex": 1,
            "height": undefined,
            "width": undefined,
          }
        }
        testID="token-avatar-image"
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Medium",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
        testID="label"
      >
        Primary Value Text
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#ffffff",
            "borderRadius": 12,
            "height": 24,
            "overflow": "hidden",
            "width": 24,
          }
        }
      >
        <Image
          onError={[Function]}
          resizeMode="contain"
          source={
            {
              "uri": "MockImage",
            }
          }
          style={
            {
              "flex": 1,
              "height": undefined,
              "width": undefined,
            }
          }
          testID="token-avatar-image"
        />
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#1c8234",
              "fontFamily": "EuclidCircularB-Medium",
              "fontSize": 10,
              "fontWeight": "500",
              "letterSpacing": 0.25,
              "lineHeight": 16,
            }
          }
          testID="label"
        >
          Secondary Value Text
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`KeyValueRow Prebuilt Component KeyValueRow should render both primary and secondary text with tooltips 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingVertical": 8,
    }
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Medium",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
        testID="label"
      >
        Primary Key Text
      </Text>
      <TouchableOpacity
        accessibilityLabel="Sample Tooltip 1} tooltip"
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        disabled={false}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 8,
            "height": 28,
            "justifyContent": "center",
            "opacity": 1,
            "width": 28,
          }
        }
      >
        <SvgMock
          color="#9fa6ae"
          height={20}
          name="Info"
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
          width={20}
        />
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#6a737d",
            "fontFamily": "EuclidCircularB-Medium",
            "fontSize": 12,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 20,
          }
        }
        testID="label"
      >
        Secondary Key Text
      </Text>
      <TouchableOpacity
        accessibilityLabel="Sample Tooltip 2} tooltip"
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        disabled={false}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 8,
            "height": 28,
            "justifyContent": "center",
            "opacity": 1,
            "width": 28,
          }
        }
      >
        <SvgMock
          color="#9fa6ae"
          height={20}
          name="Info"
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
          width={20}
        />
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Medium",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
        testID="label"
      >
        Primary Value Text
      </Text>
      <TouchableOpacity
        accessibilityLabel="Sample Tooltip 3} tooltip"
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        disabled={false}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 8,
            "height": 28,
            "justifyContent": "center",
            "opacity": 1,
            "width": 28,
          }
        }
      >
        <SvgMock
          color="#9fa6ae"
          height={20}
          name="Info"
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
          width={20}
        />
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#1c8234",
              "fontFamily": "EuclidCircularB-Medium",
              "fontSize": 10,
              "fontWeight": "500",
              "letterSpacing": 0.25,
              "lineHeight": 16,
            }
          }
          testID="label"
        >
          Secondary Value Text
        </Text>
        <TouchableOpacity
          accessibilityLabel="Sample Tooltip 4} tooltip"
          accessibilityRole="button"
          accessible={true}
          activeOpacity={1}
          disabled={false}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          style={
            {
              "alignItems": "center",
              "borderRadius": 8,
              "height": 28,
              "justifyContent": "center",
              "opacity": 1,
              "width": 28,
            }
          }
        >
          <SvgMock
            color="#9fa6ae"
            height={20}
            name="Info"
            style={
              {
                "height": 20,
                "width": 20,
              }
            }
            width={20}
          />
        </TouchableOpacity>
      </View>
    </View>
  </View>
</View>
`;

exports[`KeyValueRow Prebuilt Component KeyValueRow should render when there is only primary text 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingVertical": 8,
    }
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Medium",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
        testID="label"
      >
        Sample Key Text
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Medium",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
        testID="label"
      >
        Sample Value Text
      </Text>
    </View>
  </View>
</View>
`;
